add: Function Delete and fix register
